# westwood_motor_control_ros

./: README.md  set_position.py
install/: local_setup.sh  setup.sh
install/westwood_motor_control_sdk_wrapper/share/westwood_motor_control_sdk_wrapper/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/westwood_motor_control_sdk_wrapper/share/westwood_motor_control_sdk_wrapper/cmake/: westwood_motor_control_sdk_wrapperConfig-version.cmake  westwood_motor_control_sdk_wrapperConfig.cmake
install/westwood_motor_control_sdk_wrapper/share/westwood_motor_control_sdk_wrapper/environment/: ament_prefix_path.dsv  path.dsv
install/westwood_motor_control_sdk_wrapper/share/westwood_motor_control_sdk_wrapper/launch/: westwood_motor_server.launch.py
install/westwood_motor_interfaces/share/westwood_motor_interfaces/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/westwood_motor_interfaces/share/westwood_motor_interfaces/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_westwood_motor_interfaces__rosidl_generator_cExport-noconfig.cmake  export_westwood_motor_interfaces__rosidl_generator_cExport.cmake  export_westwood_motor_interfaces__rosidl_generator_cppExport.cmake  export_westwood_motor_interfaces__rosidl_generator_pyExport-noconfig.cmake  export_westwood_motor_interfaces__rosidl_generator_pyExport.cmake  export_westwood_motor_interfaces__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_westwood_motor_interfaces__rosidl_typesupport_fastrtps_cExport.cmake  export_westwood_motor_interfaces__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_westwood_motor_interfaces__rosidl_typesupport_fastrtps_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake  westwood_motor_interfacesConfig-version.cmake  westwood_motor_interfacesConfig.cmake  westwood_motor_interfaces__rosidl_typesupport_cExport-noconfig.cmake  westwood_motor_interfaces__rosidl_typesupport_cExport.cmake  westwood_motor_interfaces__rosidl_typesupport_cppExport-noconfig.cmake  westwood_motor_interfaces__rosidl_typesupport_cppExport.cmake  westwood_motor_interfaces__rosidl_typesupport_introspection_cExport-noconfig.cmake  westwood_motor_interfaces__rosidl_typesupport_introspection_cExport.cmake  westwood_motor_interfaces__rosidl_typesupport_introspection_cppExport-noconfig.cmake  westwood_motor_interfaces__rosidl_typesupport_introspection_cppExport.cmake
log/: latest_build
westwood_motor_control_sdk_wrapper/: CMakeLists.txt  package.xml
westwood_motor_control_sdk_wrapper/launch/: westwood_motor_server.launch.py
westwood_motor_control_sdk_wrapper/scripts/: westwood_motor_server.py
westwood_motor_control_sdk_wrapper/westwood_motor_control_sdk_wrapper/: Manager.py  Packet.py  __init__.py
westwood_motor_control_sdk_wrapper/westwood_motor_control_sdk_wrapper/pybear/: __init__.py
westwood_motor_interfaces/: CMakeLists.txt  README.md
westwood_motor_interfaces/srv/: GetAvailableMotors.srv  GetMotorPositions.srv
(+69 files in other folders)
