<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>westwood_motor_control_sdk_wrapper</name>
  <version>0.0.0</version>
  <description>ROS2 wrapper for Westwood Motor Control SDK</description>
  <maintainer email="jordan@todo.todo">jordan</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclpy</depend>
  <depend>rclcpp</depend>
  <depend>launch</depend>
  <depend>launch_ros</depend>
  <depend>python3-dev</depend>
  <depend>std_srvs</depend>
  <depend>example_interfaces</depend>
  <depend>westwood_motor_interfaces</depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <test_depend>ament_copyright</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
